// ============================================================================
// Message Gateway gRPC Service
// ============================================================================
//
// This protocol defines the gRPC API for message submission between
// construct-server (WebSocket gateway) and message-gateway (processing service).
//
// Flow:
// 1. Client sends message via WebSocket to construct-server
// 2. construct-server forwards to message-gateway via SubmitMessage RPC
// 3. message-gateway validates, rate limits, and writes to Kafka
// 4. message-gateway returns success/error to construct-server
// 5. construct-server sends ACK/error to client via WebSocket
//
// ============================================================================

syntax = "proto3";

package construct.message_gateway.v1;

// Message Gateway Service
service MessageGateway {
  // Submit a message for processing and delivery
  rpc SubmitMessage(SubmitMessageRequest) returns (SubmitMessageResponse);

  // Health check for service discovery
  rpc HealthCheck(HealthCheckRequest) returns (HealthCheckResponse);
}

// ============================================================================
// Submit Message
// ============================================================================

message SubmitMessageRequest {
  // Message metadata
  string message_id = 1;           // UUID v4
  string from = 2;                 // Sender user ID
  string to = 3;                   // Recipient user ID (local for now, user@domain for federation)

  // Double Ratchet encrypted envelope
  bytes ephemeral_public_key = 4;  // 32 bytes (Curve25519)
  bytes ciphertext = 5;            // E2E encrypted message
  uint32 message_number = 6;       // Ratchet message number

  // Authentication context
  string authenticated_user_id = 7; // User ID from WebSocket session (for anti-spoofing)
}

message SubmitMessageResponse {
  // Status of message submission
  SubmissionStatus status = 1;

  // Optional error details
  optional ErrorDetails error = 2;
}

enum SubmissionStatus {
  SUBMISSION_STATUS_UNSPECIFIED = 0;
  SUBMISSION_STATUS_SUCCESS = 1;           // Message accepted and queued
  SUBMISSION_STATUS_VALIDATION_ERROR = 2;  // Message failed validation
  SUBMISSION_STATUS_RATE_LIMITED = 3;      // User exceeded rate limit
  SUBMISSION_STATUS_USER_BLOCKED = 4;      // User is temporarily blocked
  SUBMISSION_STATUS_DUPLICATE = 5;         // Message is a replay/duplicate
  SUBMISSION_STATUS_INTERNAL_ERROR = 6;    // Server error (Kafka, Redis, etc.)
}

message ErrorDetails {
  string error_code = 1;     // Machine-readable error code (e.g., "RATE_LIMIT_EXCEEDED")
  string error_message = 2;  // Human-readable error message
}

// ============================================================================
// Health Check
// ============================================================================

message HealthCheckRequest {}

message HealthCheckResponse {
  HealthStatus status = 1;
  optional string message = 2;
}

enum HealthStatus {
  HEALTH_STATUS_UNSPECIFIED = 0;
  HEALTH_STATUS_SERVING = 1;      // Service is healthy
  HEALTH_STATUS_NOT_SERVING = 2;  // Service is unhealthy
}
